add_subdirectory(adpcm)
if(CODEC2_FOUND)
  add_subdirectory(codec2)
endif(CODEC2_FOUND)
add_subdirectory(echo)
if(SEMS_USE_SPANDSP)
  add_subdirectory(g722)
endif(SEMS_USE_SPANDSP)
if(SEMS_USE_G729)
  add_subdirectory(g729)
endif(SEMS_USE_G729)
if(GSM_FOUND)
  add_subdirectory(gsm)
endif(GSM_FOUND)
if(SEMS_USE_ILBC)
  add_subdirectory(ilbc)
endif(SEMS_USE_ILBC)
add_subdirectory(isac)
add_subdirectory(l16)
if(SEMS_USE_OPUS)
  add_subdirectory(opus)
endif(SEMS_USE_OPUS)
add_subdirectory(session_timer)
# ADD_SUBDIRECTORY (silk)
if(SPEEX_FOUND)
  add_subdirectory(speex)
endif(SPEEX_FOUND)
add_subdirectory(stats)
add_subdirectory(uac_auth)
add_subdirectory(wav)
