set (libdbase_SRCS
avp.c
diameter_msg.c
tcp_comm.c
)

IF(OPENSSL_FOUND)
	ADD_DEFINITIONS(-DWITH_OPENSSL)
ENDIF(OPENSSL_FOUND)

ADD_LIBRARY(libdbase STATIC ${libdbase_SRCS})

# FIXME
IF(SEMS_WORKAROUND_FOR_OLD_CMAKE_2_4_FOR_STATIC_LIBS)
ADD_CUSTOM_COMMAND(TARGET libdbase POST_BUILD COMMAND cp ARGS liblibdbase.a libliblibdbase.a)
ENDIF(SEMS_WORKAROUND_FOR_OLD_CMAKE_2_4_FOR_STATIC_LIBS)
