# ADD_SUBDIRECTORY (mod_aws)
add_subdirectory(mod_conference)
# ADD_SUBDIRECTORY (mod_curl)
add_subdirectory(mod_dlg)
add_subdirectory(mod_groups)
if(SEMS_USE_MONITORING)
  add_subdirectory(mod_monitoring)
endif(SEMS_USE_MONITORING)
if(MYSQLCPPCONN_FOUND)
  add_subdirectory(mod_mysql)
endif(MYSQLCPPCONN_FOUND)
if(SEMS_USE_PYTHON)
  add_subdirectory(mod_py)
endif(SEMS_USE_PYTHON)
if(HIREDIS_FOUND)
  add_subdirectory(mod_redis)
endif(HIREDIS_FOUND)
add_subdirectory(mod_regex)
add_subdirectory(mod_sbc)
add_subdirectory(mod_subscription)
add_subdirectory(mod_sys)
add_subdirectory(mod_uri)
add_subdirectory(mod_utils)
# ADD_SUBDIRECTORY (mod_xml) ADD_SUBDIRECTORY (mod_zrtp)
