set (sip_SRCS
sippy_sems_libAmAudioEvent.cpp
sippy_sems_libAmAudioFile.cpp
sippy_sems_libAmB2ABCalleeSession.cpp
sippy_sems_libAmEvent.cpp
sippy_sems_libAmSessionAudioConnector.cpp
sippy_sems_libAmSipDialog.cpp
sippy_sems_libAmSipReply.cpp
sippy_sems_libAmSipRequest.cpp
sippy_sems_libPySemsB2ABCalleeDialog.cpp
sippy_sems_libPySemsB2ABDialog.cpp
sippy_sems_libPySemsB2ABEvent.cpp
sippy_sems_libPySemsB2BDialog.cpp
sippy_sems_libPySemsDialog.cpp
sippy_sems_libcmodule.cpp
sippy_sems_libstring.cpp
)

EXECUTE_PROCESS(COMMAND python configure.py WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
ADD_LIBRARY(sip STATIC ${sip_SRCS})

# FIXME
IF(SEMS_WORKAROUND_FOR_OLD_CMAKE_2_4_FOR_STATIC_LIBS)
ADD_CUSTOM_COMMAND(TARGET sip POST_BUILD COMMAND cp ARGS libsip.a liblibsip.a)
ENDIF(SEMS_WORKAROUND_FOR_OLD_CMAKE_2_4_FOR_STATIC_LIBS)
